Fix main view scrolling overflow

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,6 +4,7 @@
   background-color: $navy-1;
   margin: 1rem;
   overflow: hidden;
+  height: 96vh;
   section {
     display: flex;
   }
