--- a/src/components/CommentList.scss
+++ b/src/components/CommentList.scss
@@ -2,4 +2,5 @@
 
 .CommentList {
   border: 1px solid yellow;
+  padding: 1rem;
 }
