--- a/src/components/CommentListItem.scss
+++ b/src/components/CommentListItem.scss
@@ -2,4 +2,5 @@
 
 .CommentListItem {
   border: 1px solid orange;
+  padding: 1rem;
 }
