--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -2,4 +2,6 @@
 
 .Post {
   border: 1px solid rgb(153, 0, 255);
+  padding: 1rem;
+  height: 100%;
 }
