--- a/src/components/PostList.scss
+++ b/src/components/PostList.scss
@@ -2,7 +2,7 @@
 
 .PostList {
   height: 90vh;
-  width: 20rem;
+  min-width: 20rem;
   overflow-x: hidden;
   overflow-y: scroll;
   // border: 1px solid $white;
