--- a/src/components/ReplyList.scss
+++ b/src/components/ReplyList.scss
@@ -2,4 +2,5 @@
 
 .ReplyList {
   border: 1px solid green;
+  padding: 1rem;
 }
