--- a/src/components/ReplyListItem.scss
+++ b/src/components/ReplyListItem.scss
@@ -2,4 +2,6 @@
 
 .ReplyListItem {
   border: 1px solid orange;
+  padding: 1rem;
+  margin: 1rem;
 }
